# torch-segment-fiducials-2d

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/: ISSUE_TEMPLATE.md
.github/workflows/: build-and-deploy-docs.yml  ci.yml
docs/: example.ipynb  index.md
example/: index.html
search/: search_index.json
src/torch_segment_fiducials_2d/: __init__.py  predict.py  train.py  utils.py
src/torch_segment_fiducials_2d/dataset/: __init__.py  download.py  training_datamodule.py  training_dataset.py
src/torch_segment_fiducials_2d/model/: __init__.py  _pretrained_weights.py  dice.py  model.py
tests/: test_dice.py  test_download_checkpoint.py  test_download_data.py  test_model.py  test_predict.py  test_utils.py
