# https://peps.python.org/pep-0517/
[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

# https://hatch.pypa.io/latest/config/metadata/
[tool.hatch.version]
source = "vcs"

# read more about configuring hatch at:
# https://hatch.pypa.io/latest/config/build/
[tool.hatch.build.targets.wheel]
only-include = ["src"]
sources = ["src"]

# https://peps.python.org/pep-0621/
[project]
name = "torch-segment-fiducials-2d"
dynamic = ["version"]
description = "A small pre-trained residual U-Net for gold fiducial segmentation in cryo-EM images"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "BSD-3-Clause" }
authors = [{ name = "Alister Burt", email = "alisterburt@gmail.com" }]
# https://pypi.org/classifiers/
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",    
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
# add your package dependencies here
dependencies = [
    "torch",
    "torchvision",
    "numpy",
    "scipy",
    "einops",
    "lightning",
    "zenodo-get",
    "pooch",
    "imageio",
    "mrcfile",
    "tiler",
    "typer",
    "torch-fourier-rescale>=0.1.1",
    "notebook>=7.4.3",
]

# https://peps.python.org/pep-0621/#dependencies-optional-dependencies
# "extras" (e.g. for `pip install .[test]`)
[project.optional-dependencies]
# add dependencies used for testing here
test = ["pytest", "pytest-cov"]
# add anything else you like to have in your dev environment here
dev = [
    "ipython",
    "pdbpp",  # https://github.com/pdbpp/pdbpp
    "rich",  # https://github.com/Textualize/rich
]

[project.urls]
homepage = "https://github.com/teamtomo/torch-segment-fiducials-2d"
repository = "https://github.com/teamtomo/torch-segment-fiducials-2d"

# Entry points
# https://peps.python.org/pep-0621/#entry-points
# same as console_scripts entry point
[project.scripts]
torch-segment-fiducials-2d = "torch_segment_fiducials_2d:cli"

# [project.entry-points."some.group"]
# tomatoes = "torch_segment_fiducials_2d:main_tomatoes"



# https://docs.pytest.org/
[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
filterwarnings = ["error"]

# https://coverage.readthedocs.io/
[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "@overload",
    "except ImportError",
    "\\.\\.\\.",
    "raise NotImplementedError()",
    "pass",
]

[tool.coverage.run]
source = ["torch_segment_fiducials_2d"]

# https://github.com/mgedmin/check-manifest#configuration
# add files that you want check-manifest to explicitly ignore here
# (files that are in the repo but shouldn't go in the package)
[tool.check-manifest]
ignore = [
    ".pre-commit-config.yaml",
    ".ruff_cache/**/*",
    "tests/**/*",
]
